<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shapeomatic.EndGameActivity"
    android:orientation="vertical"
    android:id="@+id/llEndingContent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/curved_shape">

        <TextView
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/exit_label"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/main_menu"
            android:background="@drawable/btn_curved_dialog"
            android:onClick="onClickMainMenu"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_button"
            android:background="@drawable/btn_curved_dialog_red"
            android:onClick="onClickExit"/>

        <Button
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_button"
            android:background="@drawable/btn_curved_dialog"
            android:onClick="onClickReturn"/>
    </LinearLayout>

</LinearLayout>
