<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shapeomatic.EndGameActivity"
    android:orientation="vertical"
    android:id="@+id/llEndingContent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/curved_shape">

        <TextView
            android:layout_weight="1.33"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/score"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            />
        <TextView
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:id="@+id/tvLevel"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/curved_shape">

        <TextView
            android:layout_weight="1.33"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/high_score"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            />
        <TextView
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:id="@+id/tvBestScore"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/restart"
            android:textSize="15sp"
            android:background="@drawable/btn_curved_dialog"
            android:onClick="onClickRestart"/>

        <ImageButton
            android:padding="7dp"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/restart"
            android:src="@drawable/share"
            android:scaleType="centerInside"
            android:background="@drawable/btn_curved_dialog_red"
            android:onClick="onClickShare"/>
    </LinearLayout>
</LinearLayout>
